fixed alignment issues in sign&login pages

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -57,3 +57,8 @@
   margin-right: auto;
 }
 
+#log_in_chkbox {
+  margin-right: auto;
+  margin-left: 40px;
+}
+
